--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@ p {
   font-size: 12px;
   color: green;
 }
-p.tyyli {
+tyyli {
     border-style: dotted;
     border-width: 2px;
     width: 100px;
-    height 100px;
+    height: 100px;
 }
