--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ p {
   font-size: 12px;
   color: green;
 }
-.tyyli {
+tyyli {
     border: outset red;
     border-style: dotted;
     border-width: 2px;
