--- a/tyyli.css
+++ b/tyyli.css
@@ -26,3 +26,9 @@ p {
   text-align: center;
   font-size: 40px;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
