--- a/tyyli.css
+++ b/tyyli.css
@@ -5,8 +5,13 @@ body {
 h1 {
   font-size: 30px;
 }
+h2 {
+  border-style: solid;
+}
 p {
   font-size: 20px;
+  background-color: white;
+  border-radius: 10%;
 }
 .tyyli {
     border-style: dotted;
