--- a/tyyli.css
+++ b/tyyli.css
@@ -10,7 +10,7 @@ h3 {
 }
 p {
   font-size: 20px;
-  background-color: darkgrey;
+  background-color: darkslategray;
   border-radius: 10%;
 }
 .tyyli {
