--- a/tyyli.css
+++ b/tyyli.css
@@ -12,7 +12,7 @@ p {
   font-size: 20px;
   background-color: darkslategray;
   border-radius: 10%;
-  width: max-content;
+  width: 100%
 }
 .tyyli {
     border-style: dotted;
