--- a/css.css
+++ b/css.css
@@ -2,37 +2,65 @@
     box-sizing: border-box;
     }
     
+/* navigaatiot */ 
+
 .header {
     padding: 30px;
     text-align: center;
     font-size: 35px;
-    }
+}
     
 .nav {
-    float: left;
-    width: 30%;
-    height: 300px;
+    border: 3px solid; 
+    margin: auto;
+    width: 80%;
     padding: 20px;
-    }
-    
+}
+
+.main {
+    margin: auto;
+    width: 80%;
+}
+
 .section {
  
-    }
+}
 
 .article {
 
-    }
+}
 
 .aside  {
-    }
+
+}
 
 .footer {
 
     }
 
-.alpha {
+/* tyylit */ 
+.alphabullet {
   list-style-type: lower-alpha;
 }
 .boxbullet {
   list-style-type: square;
+
+}
+
+/* muotoilut */
+
+video.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.warning {
+    border: 30px outset red;
+    color: black;
+    background-color: yellow;
+    font-size: 40px;
+    width: 60%;
+    text-align: center;
+    margin: auto;
 }
