--- a/css.css
+++ b/css.css
@@ -19,7 +19,7 @@
 
 .main {
     margin: auto;
-    width: 80%;
+    width: 90%;
 }
 
 .section {
@@ -48,6 +48,12 @@
 }
 
 /* muotoilut */
+
+main.center {
+    display: block;
+    margin-left:auto;
+    margin-right:auto;
+}
 
 video.center {
     display: block;
