--- a/css.css
+++ b/css.css
@@ -49,10 +49,10 @@
 
 /* muotoilut */
 
-main.center {
+div.nomics {
     display: block;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;   
 }
 
 video.center {
