--- a/css.css
+++ b/css.css
@@ -6,6 +6,9 @@ body {
     background-color: black;
     color: white;
     text-decoration: none;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
     }
     
 /* navigaatiot */ 
