--- a/css.css
+++ b/css.css
@@ -1,15 +1,16 @@
 * {
     box-sizing: border-box;
-    }
+}
 
 body {
-    background-color: black;
+    background-color: darkgrey;
     color: white;
     text-decoration: none;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    }
+    font-family: Arial, Helvetica, sans-serif;
+}
     
 /* navigaatiot */ 
 
@@ -17,58 +18,71 @@ body {
     padding: 30px;
     text-align: center;
     font-size: 35px;
+    background-color: thistle;
 }
     
 .nav {
-    margin: auto;
-    width: 40%;
-    padding: 10px;
-    text-decoration: none;
+    float: center;
+    display: block;
     text-align: center;
-    }
+    background-color: lightgreen;
+}
+
+.nav2 {
+    float: left;
+    display: block;
+    overflow: hidden;
+    text-align: center;
+    background-color: cyan;
+    width: 20%;
+    
+}
+
+/* clear floats after the columns */
+
+section::after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 a:link, a:visited {
     background-color: black;
     color: white;
-    border: 2px solid white;
-    padding: 10px 20px;
+    border: none;
+    padding: 10px 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    }
+}
       
 a:hover, a:active {
     background-color: white;
     color: green;
-    }
+}
 
 .main {
     margin: auto;
-    width: 90%;
-    }
-
-.section {
-    margin: auto;
-    width: 90%;
-    }
-
-.section-c {
-    margin: auto;
-    width: 90%;
-    text-align: center;
-    }
+}
 
 .article {
-    text-align: left;
-    }
+    float: left;
+    background-color: cornflowerblue;
+    width: 80%;
+    padding: 20 px;
+}
 
 .aside  {
     text-align: left;
-    }
+}
 
 .footer {
-    text-align: left;
-    }
+    text-align: center;
+    color: darkslategrey;
+    background-color: lightgrey;
+    padding: 20px;
+    float: bottom;
+}
 
 .column-rules {
     border: 1px solid white;
@@ -76,7 +90,14 @@ a:hover, a:active {
     padding: 5%;
     text-align: center;
     margin: auto;
-    }
+}
+
+/* clearfix hack */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
 
 /* nappulat */
 
@@ -85,31 +106,32 @@ a:hover, a:active {
 a:link {
     text-decoration: none;
     color: white;
-  }
+}
   
 a:visited {
     text-decoration: none;
     color: white;
-  }
+}
   
 a:hover {
     text-decoration: none;
-    color: black;
-  }
+    color: green;
+}
   
 a:active {
     text-decoration: none;
-    color: black;
-  }
+    color: green;
+}
+
 
 /* tyylit */ 
 .alphabullet {
     list-style-type: lower-alpha;
-    }
+}
 
 .boxbullet {
     list-style-type: square;
-    }
+}
 
 /* muotoilut */
 
@@ -117,15 +139,19 @@ div.nomics {
     display: block;
     margin-left: 20%;
     margin-right: 20%;   
-    }
+}
 
 video.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    }
+}
 
-.warning {
+#center {
+    text-align: center;
+}
+
+#warning {
     border: 20px outset red;
     color: black;
     background-color: yellow;
@@ -133,4 +159,4 @@ video.center {
     width: 60%;
     text-align: center;
     margin: auto;
-    }
+}
