--- a/css.css
+++ b/css.css
@@ -7,7 +7,7 @@ body {
     color: green;
     text-decoration: none;
     width: 90%;
-    margin-left: auto;
+    margin-left: 30px;
     margin-right: auto;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -15,17 +15,18 @@ body {
 /* navigaatiot */ 
 
 .header {
-    padding: 10px;
+    margin: 0;
+    padding: 20px;
     text-align: center;
-    font-size: 35px;
+    font-size: 125px;
     background-color: black;
-    color: gold;
+    color: rgba(255, 217, 0, 1);
 }
     
 .navi {
     text-align: center;
-    padding: none;
-    margin: none;
+    padding: 0;
+    margin: 0;
     background-color: black;
 }
 
@@ -54,7 +55,7 @@ a:hover, a:active {
 }
 
 .main {
-    margin: auto;
+    margin: 0;
 }
 
 .kolumnikontti {
