--- a/css.css
+++ b/css.css
@@ -131,7 +131,7 @@ div.nomics {
     display: block;
     margin-left: 0%;
     margin-right: 0%; 
-    padding: 10px; 
+    padding: 0 0 35px 60px; 
 }
 
 video.center {
