--- a/css.css
+++ b/css.css
@@ -9,7 +9,7 @@ body {
     width: 90%;
     margin-left: 30px;
     margin-right: auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Tahoe, Verdana, sans-serif;
 }
     
 /* navigaatiot */ 
@@ -25,6 +25,7 @@ body {
     
 .navi {
     text-align: center;
+    font-size: 20px;
     padding: 0;
     margin: 0;
     background-color: black;
@@ -46,7 +47,7 @@ a:link, a:visited {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width: 100px;
+    width: 120px;
 }
       
 a:hover, a:active {
