--- a/css.css
+++ b/css.css
@@ -7,7 +7,7 @@ body {
     color: green;
     text-decoration: none;
     width: 90%;
-    margin-left: 30px;
+    margin-left: auto;
     margin-right: auto;
     font-family: Tahoe, Verdana, sans-serif;
 }
@@ -29,6 +29,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: black;
+    border-bottom: solid rgb(30, 30, 30) 1px;
 }
 
 /* clear floats after the columns */
@@ -134,6 +135,12 @@ div.nomics {
     margin-left: 0%;
     margin-right: 0%; 
     padding: 0 0 35px 60px; 
+}
+
+img.left-image{
+    position:absolute;
+    left:45px;
+    top:10px;
 }
 
 video.center {
