--- a/css.css
+++ b/css.css
@@ -6,7 +6,8 @@ body {
     background-color: black;
     color: green;
     text-decoration: none;
-    width: 90%;
+    font-size: 20px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     font-family: Tahoe, Verdana, sans-serif;
