--- a/css.css
+++ b/css.css
@@ -87,7 +87,7 @@ a:hover, a:active {
 
 .kolumni1-2 {
     display: table-cell;
-    padding: 20px 80px 0px 80px;
+    padding: 20px;
     width: 40%;
     background-color: black;
 }
