--- a/css.css
+++ b/css.css
@@ -20,7 +20,7 @@ body {
     padding: 0px;
     text-align: center;
     font-size: 125px;
-    background-color: darkgrey;
+    background-color: black;
     color: rgba(255, 217, 0, 1);
 }
 .harmaa {
