--- a/styletable.css
+++ b/styletable.css
@@ -1,27 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    background-color: white;
-    color: black;
-}
-.footer {
-    text-align: right;
-    color: rgb(70, 70, 70);
-    background-color: rgb(20, 20, 20);
-    padding: 20px;
-}
-.header {
-    background-color: white;
- }
-
-.table {
-    border: 1px solid black;
-}
-.th {
-    border: 1px solid black;
-}
-.td {
+table {
     border: 1px solid black;
 }
