--- a/css.css
+++ b/css.css
@@ -4,7 +4,7 @@
 
 body {
     background-color: black;
-    color: green;
+    color: white;
     text-decoration: none;
     font-size: 20px;
     width: 100%;
@@ -133,12 +133,9 @@ a:hover, a:active {
 }
 
 .center2 {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border: 5px solid #FFFF00;
-    padding: 10px;
+    margin: auto;
+    width: 100%;
+    text-align: center;
 }
 
 /* muotoilut */
@@ -155,11 +152,6 @@ img.left-image{
     position:absolute;
     left:5vw;
     top:1vh;
-}
-
-.row{
-    background-color: black;
-    color: white;
 }
 
 video.center {
